--- a/app/src/main/res/layout/activity_flights.xml
+++ b/app/src/main/res/layout/activity_flights.xml
@@ -9,36 +9,331 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
 
-        <android.support.v4.widget.NestedScrollView
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
+
+        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
             android:scrollbars="none"
             android:scrollingCache="true">
 
             <LinearLayout
+                android:id="@+id/oldFlight"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:descendantFocusability="blocksDescendants"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/spacing_large"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/spacing_large"
+                android:paddingRight="@dimen/spacing_large">
 
-                <View
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/spacing_medium"
+                    android:visibility="visible">
 
-                <include layout="@layout/fragment_tabs_store" />
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/flightCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/spacing_middle"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        android:layout_marginRight="@dimen/spacing_middle"
+                        android:layout_marginBottom="@dimen/spacing_medium"
+                        android:layout_weight="1">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/blue_900">
+
+                                <TextView
+                                    android:id="@+id/flightnum"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_marginLeft="16dp"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:text="SQ 308"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                                    android:textColor="@color/mdtp_white"
+                                    android:textStyle="bold" />
+                            </RelativeLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="horizontal">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/content34"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="1"
+                                        android:gravity="center"
+                                        android:text="SIN"
+                                        android:textAppearance="@style/CustomTabTextAppearance"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="48sp" />
+
+                                    <TextView
+                                        android:id="@+id/depart_time"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="24dp"
+                                        android:layout_marginRight="24dp"
+                                        android:layout_marginBottom="8dp"
+                                        android:layout_weight="1"
+                                        android:gravity="center"
+                                        android:text="Departs 9.10am, 27 Oct 2018"
+                                        android:textColor="@android:color/black" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/content54"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="1"
+                                        android:gravity="center"
+                                        android:text="LHR"
+                                        android:textAppearance="@style/CustomTabTextAppearance"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="48sp" />
+
+                                    <TextView
+                                        android:id="@+id/arrive_time"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="24dp"
+                                        android:layout_marginRight="24dp"
+                                        android:layout_marginBottom="8dp"
+                                        android:layout_weight="1"
+                                        android:gravity="center"
+                                        android:text="Arrives 4.10pm, 27 Jan 2018"
+                                        android:textColor="@android:color/black" />
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentTop="true"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginRight="16dp"
+                                android:background="@color/grey_40" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="16dp"
+                                android:orientation="horizontal">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/content74"
+                                        android:layout_width="94dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="16dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="GATE"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="18sp" />
+
+                                    <TextView
+                                        android:id="@+id/gate"
+                                        android:layout_width="94dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="16dp"
+                                        android:layout_marginTop="0dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="A26"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="30sp" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="360dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/content94"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="0dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="BOARDING"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="18sp" />
+
+                                    <TextView
+                                        android:id="@+id/boarding_time"
+                                        android:layout_width="164dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="0dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="8.30am"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="30sp" />
+
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/textView4"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="16dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="SEAT"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="18sp" />
+
+                                    <TextView
+                                        android:id="@+id/seat"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="16dp"
+                                        android:layout_marginTop="0dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:text="27A"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="30sp" />
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:id="@+id/btn_capture_photo"
+                                    android:layout_width="25dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginLeft="20dp"
+                                    android:paddingLeft="6dp"
+                                    android:paddingTop="7dp"
+                                    android:paddingRight="6dp"
+                                    android:paddingBottom="5dp"
+                                    android:src="@drawable/circle" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+
+
+                                    android:text="On Time"
+                                    android:textColor="@color/green_800"
+                                    android:textSize="18sp" />
+
+
+                            </LinearLayout>
+
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_alignParentTop="true"
+                                android:layout_marginLeft="16dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginRight="16dp"
+                                android:layout_marginBottom="8dp"
+                                android:background="@color/grey_40" />
+
+                            <RelativeLayout
+                                android:id="@+id/travelflex"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+
+                                <TextView
+                                    android:id="@+id/bid_details"
+                                    android:layout_width="227dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_marginEnd="77dp"
+                                    android:layout_marginRight="77dp"
+                                    android:paddingLeft="16dp"
+                                    android:paddingTop="4dp"
+                                    android:paddingRight="16dp"
+                                    android:paddingBottom="12dp"
+                                    android:text="@string/travel_flex"
+                                    android:textColor="@android:color/black" />
+
+                                <Button
+                                    android:layout_width="50dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_marginRight="20dp"
+                                    android:background="@drawable/ic_arrow_right" />
+
+                            </RelativeLayout>
+
+
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+
+
+                </LinearLayout>
 
             </LinearLayout>
-
         </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        android:layout_gravity="bottom"
+        android:background="@color/grey_60"
+        app:itemIconTint="@color/mdtp_white"
+        app:itemTextColor="@color/mdtp_white"
+        app:menu="@menu/menu_bottom_navigation_basic" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
